--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Ramesh Ramineni | Cloud Support Engineer</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <style>
+/* ===== BASE ===== */
 *{margin:0;padding:0;box-sizing:border-box}
 html{scroll-behavior:smooth}
 body{font-family:'Segoe UI',Tahoma,Verdana,sans-serif;background:#f8f9fa;color:#333;line-height:1.6;}
@@ -220,35 +221,26 @@ footer p{margin-top:15px;font-size:0.95rem;color:#ccc;}
 .fade-in{opacity:0;transform:translateY(30px);transition:all 0.8s ease-out;}
 .fade-visible{opacity:1;transform:translateY(0);}
 
-/* ===== RESPONSIVE ===== */
-@media(max-width:1024px){.header-container{padding:15px 20px;} }
-@media(max-width:768px){
-  .hero-container{
-    flex-direction:column;
-    align-items:center;
-    text-align:center;
-    gap:20px; /* spacing between content */
-  }
-  .profile-img{
-    width:180px;
-    height:180px;
-  }
-  .hero-content h1{
-    font-size:2rem;
-  }
-  .tagline{
-    font-size:1.3rem;
-  }
-  .action-buttons{
-    flex-direction:column;
-    gap:12px;
-  }
-  nav{
-    justify-content:center;
-  }
-  section{
-    padding:50px 15px; /* less padding for mobile */
-  }
+/* ===== RESPONSIVE FOR MOBILE ===== */
+@media (max-width: 1024px){.header-container{padding:15px 20px;} }
+@media (max-width: 768px){
+  .header-container{flex-direction:column;align-items:center;gap:10px;padding:10px 15px;}
+  nav{justify-content:center;flex-wrap:wrap;gap:10px;}
+  .nav-link, .cv-button{font-size:0.85rem;padding:6px 10px;}
+  .hero-container{flex-direction:column;align-items:center;text-align:center;gap:15px;padding-top:100px;}
+  .profile-img{width:150px;height:150px;}
+  .hero-content h1{font-size:1.8rem;}
+  .tagline{font-size:1.1rem;}
+  .hero-content p{font-size:0.95rem;}
+  .action-buttons{flex-direction:column;gap:10px;}
+  .hero-social{justify-content:center;gap:10px;}
+  section{padding:50px 15px;}
+  .box,.skill-card,.edu-card,.cert-card{padding:15px;}
+  .skills-grid,.edu-grid,.certificates-grid{grid-template-columns:1fr;gap:15px;}
+  .contact .form-group input,.contact .form-group textarea{font-size:0.9rem;padding:12px 12px 12px 40px;}
+  .contact button{font-size:0.9rem;padding:12px 16px;}
+  footer{padding:30px 15px;text-align:center;}
+  footer .social-links a{margin:5px;font-size:0.85rem;padding:8px 12px;}
 }
 </style>
 </head>
@@ -270,7 +262,6 @@ footer p{margin-top:15px;font-size:0.95rem;color:#ccc;}
     </nav>
   </div>
 </header>
-
 <!-- HERO -->
 <section id="home" class="hero-section fade-in">
   <div class="section-container hero-container">
@@ -492,4 +483,3 @@ window.addEventListener('scroll',function(){
 </script>
 </body>
 </html>
-
