--- a/index.html
+++ b/index.html
@@ -452,34 +452,44 @@ footer p{margin-top:15px;font-size:0.95rem;color:#ccc;}
 
 <script>
 // Scroll progress, active nav, fade-in
-const sections=document.querySelectorAll('section[id]');
-const navLinks=document.querySelectorAll('.nav-link');
-const progress=document.getElementById('scroll-progress');
-const header=document.querySelector('header');
+const sections = document.querySelectorAll('section[id]');
+const navLinks = document.querySelectorAll('.nav-link');
+const progress = document.getElementById('scroll-progress');
+const header = document.querySelector('header');
 
-window.addEventListener('scroll',function(){
-  let scrollY=window.scrollY;
-  header.classList.toggle('scrolled',scrollY>20);
-  progress.style.width=(scrollY/(document.body.scrollHeight-window.innerHeight)*100)+'%';
+function checkFadeIn() {
+  document.querySelectorAll('.fade-in').forEach(el => {
+    let top = el.getBoundingClientRect().top;
+    if (top < window.innerHeight - 150) el.classList.add('fade-visible');
+  });
+}
 
-  sections.forEach(sec=>{
-    let top=sec.offsetTop-120;
-    let bottom=top+sec.offsetHeight;
-    let id=sec.getAttribute('id');
-    if(scrollY>=top && scrollY<bottom){
-      navLinks.forEach(link=>link.classList.remove('active'));
-      document.querySelector('.nav-link[href="#'+id+'"]').classList.add('active');
+// Run on scroll
+window.addEventListener('scroll', function() {
+  let scrollY = window.scrollY;
+  header.classList.toggle('scrolled', scrollY > 20);
+  progress.style.width = (scrollY / (document.body.scrollHeight - window.innerHeight) * 100) + '%';
+
+  sections.forEach(sec => {
+    let top = sec.offsetTop - 120;
+    let bottom = top + sec.offsetHeight;
+    let id = sec.getAttribute('id');
+    if (scrollY >= top && scrollY < bottom) {
+      navLinks.forEach(link => link.classList.remove('active'));
+      document.querySelector('.nav-link[href="#' + id + '"]').classList.add('active');
     }
   });
-  if(scrollY<100){
-    navLinks.forEach(link=>link.classList.remove('active'));
+
+  if (scrollY < 100) {
+    navLinks.forEach(link => link.classList.remove('active'));
     document.querySelector('.nav-link[href="#home"]').classList.add('active');
   }
-  document.querySelectorAll('.fade-in').forEach(el=>{
-    let top=el.getBoundingClientRect().top;
-    if(top<window.innerHeight-150) el.classList.add('fade-visible');
-  });
+
+  checkFadeIn();
 });
+
+// Run on page load so hero section shows immediately
+window.addEventListener('load', checkFadeIn);
 </script>
 </body>
 </html>
