--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ footer p{margin-top:15px;font-size:0.95rem;color:#ccc;}
       <a href="#education" class="nav-link"><i class="fas fa-graduation-cap"></i> Education</a>
       <a href="#certificates" class="nav-link"><i class="fas fa-certificate"></i> Certificates</a>
       <a href="#contact" class="nav-link"><i class="fas fa-envelope"></i> Contact</a>
-      <a href="#" class="cv-button"><i class="fas fa-download"></i> Download CV</a>
+      <a href="Ramesh_CloudSupportEngineer_Resume.pdf" class="cv-button"><i class="fas fa-download"></i> Download CV</a>
     </nav>
   </div>
 </header>
@@ -289,11 +289,11 @@ footer p{margin-top:15px;font-size:0.95rem;color:#ccc;}
       <p>Experienced Cloud Support Engineer with expertise in managing and securing Linux servers, ensuring high availability and optimal performance. Skilled in automation, troubleshooting, and configuring services using DevOps tools to streamline operations. Strong background in system administration and network security, with hands-on experience across multi-cloud environments. Adept at implementing efficient, scalable, and secure infrastructure solutions. Passionate about leveraging Linux, Cloud, and DevOps technologies to drive operational efficiency and organizational growth.</p>
       <div class="action-buttons">
         <a href="#contact" class="btn btn-primary"><i class="fas fa-paper-plane"></i> Hire Me</a>
-        <a href="#" class="btn btn-secondary"><i class="fas fa-download"></i> Download CV</a>
+        <a href="Ramesh_CloudSupportEngineer_Resume.pdf" class="btn btn-secondary"><i class="fas fa-download"></i> Download CV</a>
       </div>
       <div class="hero-social">
         <a href="https://www.linkedin.com/in/ramesh-ramineni-6b068397/"><i class="fab fa-linkedin"></i> LinkedIn</a>
-        <a href="#"><i class="fab fa-github"></i> GitHub</a>
+        <a href="https://github.com/ramineniramesh505"><i class="fab fa-github"></i> GitHub</a>
         <a href="mailto:raminenivenkataramesh@gmail.com"><i class="fas fa-envelope"></i> Email</a>
         <a href="tel:+971551141969"><i class="fas fa-phone"></i> Phone</a>
       </div>
@@ -541,3 +541,4 @@ navLinks.forEach(link => {
 
 </body>
 </html>
+
