--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ footer p{margin-top:15px;font-size:0.95rem;color:#ccc;}
       <a href="#skills" class="nav-link"><i class="fas fa-cogs"></i> Technical Skills</a>
       <a href="#experience" class="nav-link"><i class="fas fa-briefcase"></i> Experience</a>
       <a href="#education" class="nav-link"><i class="fas fa-graduation-cap"></i> Education</a>
-      <a href="#certificates" class="nav-link"><i class="fas fa-certificate"></i> Certificates</a>
+      <a href="#certificates" class="nav-link"><i class="fas fa-certificate"></i> Certifications</a>
       <a href="#contact" class="nav-link"><i class="fas fa-envelope"></i> Contact</a>
       <a href="Ramesh_CloudSupportEngineer_Resume.pdf" class="cv-button"><i class="fas fa-download"></i> Download CV</a>
     </nav>
@@ -413,9 +413,9 @@ footer p{margin-top:15px;font-size:0.95rem;color:#ccc;}
 </section>
 
 <!-- CERTIFICATES -->
-<section id="certificates" class="fade-in">
+<section id="certifications" class="fade-in">
   <div class="section-container">
-    <h2>Certificates</h2>
+    <h2>Certifications</h2>
     <div class="certificates-grid">
       
       <div class="cert-card">
@@ -541,4 +541,5 @@ navLinks.forEach(link => {
 
 </body>
 </html>
+
 
