--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ h2{
 .edu-card div{flex:1;}
 .edu-card strong{font-size:1.1rem;display:block;margin-bottom:5px;}
 
-/* ===== CERTIFICATES ===== */
+/* ===== CERTIFICATIONS ===== */
 .certificates-grid{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
@@ -273,7 +273,7 @@ footer p{margin-top:15px;font-size:0.95rem;color:#ccc;}
       <a href="#skills" class="nav-link"><i class="fas fa-cogs"></i> Technical Skills</a>
       <a href="#experience" class="nav-link"><i class="fas fa-briefcase"></i> Experience</a>
       <a href="#education" class="nav-link"><i class="fas fa-graduation-cap"></i> Education</a>
-      <a href="#certificates" class="nav-link"><i class="fas fa-certificate"></i> Certifications</a>
+      <a href="#certifications" class="nav-link"><i class="fas fa-certificate"></i> Certifications</a>
       <a href="#contact" class="nav-link"><i class="fas fa-envelope"></i> Contact</a>
       <a href="Ramesh_CloudSupportEngineer_Resume.pdf" class="cv-button"><i class="fas fa-download"></i> Download CV</a>
     </nav>
@@ -541,5 +541,4 @@ navLinks.forEach(link => {
 
 </body>
 </html>
-
 
